# toxicity

./: .gitignore  README.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  uvicorn_app.py
backend/app/: api.py  config.py  model_registry.py  schemas.py
backend/app/routers/: predict.py
backend/app/services/: explanations.py  inference.py
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
