[project]
name = "toxicity-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.2",
  "transformers>=4.43",
  "torch>=2.2",
  "numpy>=1.26",
  "pandas>=2.2",
  "shap>=0.46.0",
  "lime>=0.2.0.1",
  "captum>=0.7.0"
]

[tool.uvicorn]
factory = true
host = "0.0.0.0"
port = 8000
reload = true
